# Mandrill

./: .gitignore  .gitmodules  AABB_8h_source.html  AccelerationStructure_8h_source.html  App_8h_source.html  Buffer_8h_source.html  CMakeLists.txt  CMakePresets.json  Camera_8h_source.html  Common_8h_source.html  Descriptor_8h_source.html  Device_8h_source.html  Error_8h_source.html  Extension_8h_source.html  Frustum_8h_source.html  Helpers_8h_source.html  Image_8h_source.html  Layout_8h_source.html  Log_8h_source.html  Mandrill.cpp  Mandrill.h  Mandrill_8h_source.html  Pass_8h_source.html  Pipeline_8h_source.html  README.md  RayTracingPipeline_8h_source.html  RenderGraph_8h_source.html  Sampler_8h_source.html  Scene_8h_source.html  Shader_8h_source.html  Swapchain_8h_source.html  Texture_8h_source.html  annotated.html  annotated_dup.js  classMandrill_1_1AccelerationStructure-members.html  classMandrill_1_1AccelerationStructure.html  classMandrill_1_1AccelerationStructure.js  classMandrill_1_1App-members.html  classMandrill_1_1App.html  classMandrill_1_1App.js  (+109 more)
.github/workflows/: gh-pages.yml
app/: CMakeLists.txt
app/DeferredShading/: CMakeLists.txt  DeferredShading.cpp  GBuffer.frag  GBuffer.vert  Resolve.frag  Resolve.vert
app/EDAN35/: CMakeLists.txt
app/EDAN35/Assignment2/: Assignment2.cpp  CMakeLists.txt  GBuffer.frag  GBuffer.vert  Resolve.frag  Resolve.vert
app/RayTracer/: CMakeLists.txt  RayClosestHit.rchit  RayGen.rgen  RayMiss.rmiss  RayPayload.glsl  RayTracer.cpp
app/RayTracerApp/: CMakeLists.txt  RayClosestHit.rchit  RayGen.rgen  RayMiss.rmiss  RayTracerApp.cpp  Resolve.frag
app/SDF/: CMakeLists.txt  Fullscreen.vert  SDF.cpp  SDF.frag
app/SampleApp/: CMakeLists.txt  FragmentShader.frag  FragmentShader.frag.d  SampleApp.cpp  VertexShader.vert  VertexShader.vert.d
app/SceneViewer/: CMakeLists.txt  FragmentShader.frag  FragmentShader.frag.d  SceneViewer.cpp  VertexShader.vert  VertexShader.vert.d
app/VolumeViewer/: CMakeLists.txt  Environment.frag  Fullscreen.vert  RayMarcher.frag  VolumeViewer.cpp
doc/: Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  (+24 more)
src/: AABB.h  AccelerationStructure.cpp  AccelerationStructure.h  App.cpp  App.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Error.cpp  Error.h  Extension.cpp  Extension.h  Frustum.h  Helpers.h  Image.cpp  Image.h  Layout.cpp  Layout.h  Log.cpp  Log.h  Mandrill.h  Pass.cpp  Pass.h  Pipeline.cpp  Pipeline.h  RayTracingPipeline.cpp  RayTracingPipeline.h  RenderGraph.cpp  RenderGraph.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  (+6 more)
src/Pipelines/: CMakeLists.txt  Pipeline.cpp  Pipeline.h
src/Pipelines/Rasterizer/: CMakeLists.txt  Rasterizer.cpp  Rasterizer.h
src/RenderPasses/: CMakeLists.txt  RenderPass.cpp  RenderPass.h
src/RenderPasses/Deferred/: CMakeLists.txt  Deferred.cpp  Deferred.h
src/RenderPasses/GUI/: CMakeLists.txt  GUI.cpp  GUI.h
src/RenderPasses/Rasterizer/: Rasterizer.cpp  Rasterizer.h
src/RenderPasses/RayTracer/: CMakeLists.txt  RayTracer.cpp  RayTracer.h
src/RenderPasses/RayTracing/: CMakeLists.txt  RayTracing.cpp  RayTracing.h
submodules/: CMakeLists.txt
