# GLFW
message(STATUS "Configure GLFW")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(glfw)

# GLM
message(STATUS "Configure GLM")
set(GLM_BUILD_TESTS OFF)
set(GLM_BUILD_LIBRARY OFF)
set(GLM_BUILD_INSTALL OFF)
add_subdirectory(glm)
